// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User profile message button test Test not present 1`] = `
<DocumentFragment>
  <button
    class="flyout-trigger message-button-flyout flyout-closed nti-button button primary medium pv-md ph-xl"
    tabindex="0"
  >
    <div
      data-button-label="true"
    >
      <span />
      <span>
        Message
      </span>
    </div>
  </button>
</DocumentFragment>
`;

exports[`User profile message button test Test present 1`] = `
<DocumentFragment>
  <div
    class="nti-link-to-path"
    to="#"
  >
    <button
      class="available nti-button button primary medium pv-md ph-xl"
      tabindex="0"
    >
      <div
        data-button-label="true"
      >
        <span />
        <span>
          Message
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
